--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Wadsworth</h1>
+<p>Monkeys' brains, though popular in Cantonese cuisine, are not often to be found in Washington, D.C.!</p>
