--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Wadsworth</h1>
-<p>Monkeys' brains, though popular in Cantonese cuisine, are not often to be found in Washington, D.C.!</p>
+<div class="center jumbotron">
+  <h1>Wadsworth</h1>
+  <p>Monkeys' brains, though popular in Cantonese cuisine, are not often to be found in Washington, D.C.!</p>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
